# autoresearch-class

./: .gitignore  CURRICULUM.md  README.md  TUTORIAL.md  pyproject.toml
.claude/: settings.json
STAGES/: 00-setup.md  01-skill-tour.md  02-dataset.md  03-mlflow.md  04-baseline.md  05-journal.md  06-loop.md  07-debrief.md
baseline/: data.py  model.py  score.py  train.py
docs/: INSTRUCTOR.md
docs/superpowers/plans/: 2026-05-23-autoresearch-class.md
docs/superpowers/specs/: 2026-05-23-autoresearch-class-design.md
journal/: JOURNAL.md  TEMPLATE.md
mlflow/: README.md  docker-compose.yml
scripts/: fake_iter.py
tests/: test_companion_builder.py  test_companion_design_lint.py  test_data.py  test_fake_iter_e2e.py  test_model.py  test_score_print_acc.py  test_stages_lint.py
viz/: companion.py
viz/_static/: chalkboard.css
viz/_templates/: companion.html.j2
