[project]
name = "autoresearch-class"
version = "0.1.0"
description = "Graduate-level hands-on for Karpathy-style autoresearch on CIFAR-10"
requires-python = ">=3.11"
dependencies = [
  "torch>=2.2",
  "torchvision>=0.17",
  "mlflow>=2.10",
  "jinja2>=3.1",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
